--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             <li><a href="#">Tin Man</a></li>
             <li>Cowardly Lion</li>
             <li>Scarecrow</li>
+            <li>Good Witch</li>
           </ul>
         </nav>
       </header>
