added witch html

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <li><a href="#">Tin Man</a></li>
             <li>Cowardly Lion</li>
             <li>Scarecrow</li>
-            <li>Good Witch</li>
+            <li><a href="witches.html">Witches</a></li>
           </ul>
         </nav>
       </header>
